# OPENAI_ASSISTANT

./: README.md  pyproject.toml
openai_assistant/: app.py  assistant_manager.py  search_api.py
openai_assistant/Chroma_Path/: chroma.sqlite3  chroma.sqlite3-journal
openai_assistant/Ingestion/: data_extraction.py  ingestion.py  vectorizer.py
